--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/about">About</a></li>
-	        		<li><a href="/cv">CV</a></li>
+	        		<li><a href="/projects">Projects</a></li>
 	        		<li><a href="/blog">Blog</a></li>
 	    		</ul>
 			</nav>
@@ -25,7 +25,7 @@
 			<footer>
 	    		<ul>
 	        		<li><a href="mailto:tchambers14@gmail.com">email</a></li>
-	        		<li><a href="https://github.com/tchambers14">github.com/tchambers14</a></li>
+	        		<li><a href="https://github.com/whalemagnet">github.com/whalemagnet</a></li>
 				</ul>
 			</footer>
 		</body>
