--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
 		        	<li><a href="/about">About</a></li>
 	        		<li><a href="/projects">Projects</a></li>
 	        		<li><a href="/blog">Blog</a></li>
+					<li><a href="/watching">Watching</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
